added manu actions for manage decoration object